--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
             <img src="images/cover-photo-one.jpg" alt="">
         </div>
         <picture class="cover_photo_two">
-            <source srcset="images/cover-photo-three.jpg" media="(min-width: 768px)">
-            <img src="images/cover-photo-two.jpg" alt="">
+            <source srcset="images/cover-photo-two.jpg" media="(min-width: 768px)">
+            <img src="images/cover-photo-three.jpg" alt="">
         </picture>
     </section>
 
@@ -87,16 +87,30 @@
             </div>
             <div class="portfolio_grid-container grid">
                 <div class="img_container hide hide">
-                    <img src="images/portfolio-img-one.jpg" alt="">
+                    <img src="images/portfolio-img-five.jpg" alt="">
                 </div>
                 <div class="img_container hide hide">
-                    <img src="images/portfolio-img-two.jpg" alt="">
+                    <img src="images/portfolio-img-six.jpg" alt="">
                 </div>
                 <div class="img_container hide hide">
-                    <img src="images/portfolio-img-three.jpg" alt="">
+                    <img src="images/portfolio-img-seven.jpg" alt="">
                 </div>
                 <div class="img_container hide hide">
-                    <img src="images/portfolio-img-four.jpg" alt="">
+                    <img src="images/portfolio-img-eight.jpg" alt="">
+                </div>
+            </div>
+            <div class="portfolio_grid-container grid">
+                <div class="img_container hide">
+                    <img src="images/portfolio-img-nine.jpg" alt="">
+                </div>
+                <div class="img_container hide">
+                    <img src="images/portfolio-img-ten.jpg" alt="">
+                </div>
+                <div class="img_container hide">
+                    <img src="images/portfolio-img-eleven.jpg" alt="">
+                </div>
+                <div class="img_container hide">
+                    <img src="images/portfolio-img-twelve.jpg" alt="">
                 </div>
             </div>
             <div class="portfolio_grid-container grid">
