--- a/index.html
+++ b/index.html
@@ -72,58 +72,58 @@
         </div>
         <div class="portfolio_container flex_row">
             <div class="portfolio_grid-container grid">
-                <div class="img_container hide">
+                <div class="img_container hide portriat">
                     <img src="images/portfolio-img-one.jpg" alt="">
                 </div>
-                <div class="img_container hide">
+                <div class="img_container hide landscape one">
                     <img src="images/portfolio-img-two.jpg" alt="">
                 </div>
-                <div class="img_container hide">
+                <div class="img_container hide landscape">
                     <img src="images/portfolio-img-three.jpg" alt="">
                 </div>
-                <div class="img_container hide">
+                <div class="img_container hide portriat">
                     <img src="images/portfolio-img-four.jpg" alt="">
                 </div>
             </div>
             <div class="portfolio_grid-container grid">
-                <div class="img_container hide hide">
+                <div class="img_container hide portriat">
                     <img src="images/portfolio-img-five.jpg" alt="">
                 </div>
-                <div class="img_container hide hide">
+                <div class="img_container hide landscape">
                     <img src="images/portfolio-img-six.jpg" alt="">
                 </div>
-                <div class="img_container hide hide">
+                <div class="img_container hide landscape">
                     <img src="images/portfolio-img-seven.jpg" alt="">
                 </div>
-                <div class="img_container hide hide">
+                <div class="img_container hide portriat">
                     <img src="images/portfolio-img-eight.jpg" alt="">
                 </div>
             </div>
             <div class="portfolio_grid-container grid">
-                <div class="img_container hide">
+                <div class="img_container hide portriat">
                     <img src="images/portfolio-img-nine.jpg" alt="">
                 </div>
-                <div class="img_container hide">
+                <div class="img_container hide landscape">
                     <img src="images/portfolio-img-ten.jpg" alt="">
                 </div>
-                <div class="img_container hide">
-                    <img src="images/portfolio-img-eleven.jpg" alt="">
-                </div>
-                <div class="img_container hide">
+                <div class="img_container hide landscape">
                     <img src="images/portfolio-img-twelve.jpg" alt="">
+                </div>
+                <div class="img_container hide portriat">
+                    <img src="images/portfolio-img-eleven.jpg" alt="">
                 </div>
             </div>
             <div class="portfolio_grid-container grid">
-                <div class="img_container hide">
+                <div class="img_container hide portriat">
                     <img src="images/portfolio-img-one.jpg" alt="">
                 </div>
-                <div class="img_container hide">
+                <div class="img_container hide landscape one">
                     <img src="images/portfolio-img-two.jpg" alt="">
                 </div>
-                <div class="img_container hide">
+                <div class="img_container hide landscape">
                     <img src="images/portfolio-img-three.jpg" alt="">
                 </div>
-                <div class="img_container hide">
+                <div class="img_container hide portriat">
                     <img src="images/portfolio-img-four.jpg" alt="">
                 </div>
             </div>
