final draft commit

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         </div>
 
         <nav class="mobile_nav flex_column" id="mobile-nav">
-            <div class="portfolio_link-cont">
+            <div class="portfolio_link-cont nav_link">
                 <a href="#portfolio">Portfolio</a>
             </div>
-            <div class="studio_link-cont">
+            <div class="studio_link-cont nav_link">
                 <a href="#studio">Studio</a>
             </div>
             <div class="social_media flex_row">
@@ -64,10 +64,10 @@
             <p>Type</p>
             <i class="fa-solid fa-chevron-right chevron" ></i>
             <div class="choose_type flex_row inactive">
-                <p>dolor sit</p>
-                <p>amet consectetur</p>
-                <p>adipisicing elit</p>
-                <p>nulla voluptatibus</p>
+                <p>dolor</p>
+                <p>amet</p>
+                <p>adipisicing</p>
+                <p>nulla</p>
             </div>
         </div>
         <div class="portfolio_container flex_row">
